--- a/sdk/python/Dockerfile
+++ b/sdk/python/Dockerfile
@@ -3,7 +3,7 @@ FROM public.ecr.aws/docker/library/python:3.11.7-slim
 ENV AWS_ACCESS_KEY_ID=
 ENV AWS_SECRET_ACCESS_KEY=
 ENV AWS_SESSION_TOKEN=
-ENV PLATFORM_ID=
+ENV PLATFORM_ID=kubeflow
 ENV REDSHIFT_PASSWORD=
 ENV REDSHIFT_USER=
 
