Add ENV in Dockerfile

--- a/sdk/python/Dockerfile
+++ b/sdk/python/Dockerfile
@@ -1,8 +1,11 @@
 FROM public.ecr.aws/docker/library/python:3.11.7-slim
 
-ENV AWS_ACCESS_KEY_ID=
-ENV AWS_SECRET_ACCESS_KEY=
-ENV AWS_SESSION_TOKEN=
+ENV DATA_AWS_ACCESS_KEY_ID=
+ENV DATA_AWS_SECRET_ACCESS_KEY=
+ENV DATA_AWS_SESSION_TOKEN=
+ENV ENGINEERING_AWS_ACCESS_KEY_ID=
+ENV ENGINEERING_AWS_SECRET_ACCESS_KEY=
+ENV ENGINEERING_AWS_SESSION_TOKEN=
 ENV PLATFORM_ID=kubeflow
 ENV REDSHIFT_PASSWORD=
 ENV REDSHIFT_USER=
