--- a/sdk/python/Dockerfile
+++ b/sdk/python/Dockerfile
@@ -1,16 +1,21 @@
 FROM public.ecr.aws/docker/library/python:3.12.2-slim
 
 ENV PLATFORM_ID=kubeflow
+ENV REDSHIFT_DATABASE=
+ENV REDSHIFT_HOST=
+ENV REDSHIFT_IAM=
 ENV REDSHIFT_PASSWORD=
+ENV REDSHIFT_PORT=
 ENV REDSHIFT_USER=
+ENV S3_BUCKET=
 
 ADD ./dist/kfp-2.7.0-py3-none-any.whl /opt/kfp-2.7.0-py3-none-any.whl
 RUN pip install /opt/kfp-2.7.0-py3-none-any.whl
 RUN rm -rf /opt/kfp-2.7.0-py3-none-any.whl
 
-ADD ./dist_ml_pipeline/ml_pipeline-0.6.0-py3-none-any.whl /opt/ml_pipeline-0.6.0-py3-none-any.whl
-RUN pip install /opt/ml_pipeline-0.6.0-py3-none-any.whl
-RUN rm -rf /opt/ml_pipeline-0.6.0-py3-none-any.whl
+ADD ./dist_ml_pipeline/ml_pipeline-0.6.1-py3-none-any.whl /opt/ml_pipeline-0.6.1-py3-none-any.whl
+RUN pip install /opt/ml_pipeline-0.6.1-py3-none-any.whl
+RUN rm -rf /opt/ml_pipeline-0.6.1-py3-none-any.whl
 
 RUN pip install boto3==1.27.1
 RUN pip install pandas==2.2.1
