Rename database in RDS for kubeflow

--- a/manifests/kustomize/base/installs/generic/pipeline-install-config.yaml
+++ b/manifests/kustomize/base/installs/generic/pipeline-install-config.yaml
@@ -12,14 +12,14 @@ data:
     namespace: `kubectl rollout restart deployment -n <your-namespace>`.
   appName: pipeline
   appVersion: 2.1.0
-  dbHost: mysql-kubeflow-stg-744t.cdlcgwqukrb0.ap-southeast-1.rds.amazonaws.com # relic to be removed after release
+  dbHost: rds-kubeflow-ns47.cdlcgwqukrb0.ap-southeast-1.rds.amazonaws.com # relic to be removed after release
   dbPort: "3306" # relic to be removed after release
   dbType: mysql
-  mysqlHost: mysql-kubeflow-stg-744t.cdlcgwqukrb0.ap-southeast-1.rds.amazonaws.com
+  mysqlHost: rds-kubeflow-ns47.cdlcgwqukrb0.ap-southeast-1.rds.amazonaws.com
   mysqlPort: "3306"
-  mlmdDb: metadb
-  cacheDb: cachedb
-  pipelineDb: mlpipeline
+  mlmdDb: kubeflow_metadb
+  cacheDb: kubeflow_cachedb
+  pipelineDb: kubeflow_mlpipeline
   bucketName: mlpipeline
   ## defaultPipelineRoot: Optional. Default pipeline root in v2 compatible mode.
   ## https://www.kubeflow.org/docs/components/pipelines/sdk/v2/v2-compatibility/
