--- a/manifests/kustomize/base/installs/generic/mysql-secret.yaml
+++ b/manifests/kustomize/base/installs/generic/mysql-secret.yaml
@@ -3,5 +3,5 @@ apiVersion: v1
 metadata:
   name: mysql-secret
 stringData:
-  username: root
-  password: ""
+  username: # insert rds username here
+  password: "" # insert rds password here
