Add namespace in mysql-secret

--- a/manifests/kustomize/base/installs/generic/mysql-secret.yaml
+++ b/manifests/kustomize/base/installs/generic/mysql-secret.yaml
@@ -2,6 +2,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: mysql-secret
+  namespace: kubeflow
 stringData:
-  username: # insert rds username here
+  username:  # insert rds username here
   password: "" # insert rds password here
